test: enforce non-null contract on search-entity record components via ArchUnit
Adds an ArchUnit rule that for every record in io.camunda.search.entities
verifies each non-collection, non-primitive component lacking @Nullable is
guarded by an Objects.requireNonNull check in the compact constructor.
The check works by reflectively invoking the canonical constructor with
null for the component under test (and non-null sentinels for the others)
and asserting that NullPointerException is thrown. Components annotated
with @org.jspecify.annotations.Nullable, primitives, and collections
(covered by the existing mutable-default rule) are skipped.
Locks in the runtime contract introduced alongside the @NullMarked
package annotation so that future entities cannot silently regress.