@@ -19,10 +19,12 @@ import com.tngtech.archunit.lang.ArchRule;
 import com.tngtech.archunit.lang.ConditionEvents;
 import com.tngtech.archunit.lang.syntax.ArchRuleDefinition;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import org.jspecify.annotations.Nullable;
 
 /**
  * ArchUnit rules for records in {@code io.camunda.search.entities} and {@code
@@ -243,13 +245,148 @@ public final class SearchEntityArchTest {
               "authentication entity records should default collection fields to non-null "
                   + "empty instances to avoid NullPointerExceptions");
 
+  /**
+   * Every record in {@code io.camunda.search.entities} that declares non-collection, non-primitive
+   * components without {@link Nullable @Nullable} must guard them with a {@code
+   * Objects.requireNonNull} check in its compact constructor. The package is {@code @NullMarked},
+   * so the absence of {@code @Nullable} encodes a runtime non-null contract that we verify here by
+   * passing {@code null} for the component and asserting the constructor throws {@link
+   * NullPointerException}.
+   */
+  @ArchTest
+  static final ArchRule NON_NULLABLE_FIELDS_MUST_HAVE_REQUIRE_NON_NULL_GUARD =
+      ArchRuleDefinition.classes()
+          .that()
+          .resideInAPackage("io.camunda.search.entities..")
+          .and()
+          .areRecords()
+          .should(
+              new ArchCondition<>(
+                  "guard every non-@Nullable reference component with Objects.requireNonNull"
+                      + " in the compact constructor") {
+                @Override
+                public void check(final JavaClass item, final ConditionEvents events) {
+                  final Class<?> recordClass;
+                  final Constructor<?> canonicalCtor;
+                  try {
+                    recordClass = Class.forName(item.getName());
+                    canonicalCtor = canonicalConstructor(recordClass);
+                  } catch (final ReflectiveOperationException e) {
+                    events.add(
+                        violated(
+                            item,
+                            String.format(
+                                "Record '%s': could not load canonical constructor: %s",
+                                item.getSimpleName(), e.getMessage())));
+                    return;
+                  }
+
+                  final Class<?>[] paramTypes = canonicalCtor.getParameterTypes();
+                  final var components = recordClass.getRecordComponents();
+
+                  for (int i = 0; i < paramTypes.length; i++) {
+                    final Class<?> paramType = paramTypes[i];
+
+                    // Primitive components cannot be null and need no guard.
+                    if (paramType.isPrimitive()) {
+                      continue;
+                    }
+                    // Collection-typed components are covered by the dedicated mutable-default
+                    // rule above; passing null is part of their contract.
+                    if (COLLECTION_TYPES.stream().anyMatch(ct -> ct.isAssignableFrom(paramType))) {
+                      continue;
+                    }
+                    // Components explicitly opted out of null-safety are allowed to be null.
+                    if (isNullable(components[i])) {
+                      continue;
+                    }
+
+                    final Object[] args = new Object[paramTypes.length];
+                    for (int j = 0; j < paramTypes.length; j++) {
+                      args[j] = (j == i) ? null : defaultValueFor(paramTypes[j]);
+                    }
+
+                    try {
+                      final Object instance = canonicalCtor.newInstance(args);
+                      // Compact ctor may normalize null to a non-null default (e.g.
+                      // `x = x != null ? x : DEFAULT;`). Reading the component back tells us
+                      // whether the null was absorbed — an equivalent guarantee to requireNonNull.
+                      final Object fieldValue = components[i].getAccessor().invoke(instance);
+                      if (fieldValue == null) {
+                        events.add(
+                            violated(
+                                item,
+                                String.format(
+                                    "Record '%s': non-@Nullable component '%s' (type %s) is not"
+                                        + " guarded by Objects.requireNonNull in the compact"
+                                        + " constructor — either add the guard, default the value"
+                                        + " in the compact constructor, or annotate the component"
+                                        + " with @org.jspecify.annotations.Nullable",
+                                    item.getSimpleName(),
+                                    components[i].getName(),
+                                    paramType.getSimpleName())));
+                      }
+                    } catch (final InvocationTargetException e) {
+                      // Expected: Objects.requireNonNull(x, "x") throws NPE with message equal to
+                      // the component name. We assert the message matches, otherwise the NPE may
+                      // have fired on a different non-null component whose defaultValueFor(...)
+                      // returned null (e.g. Unsafe allocation failure) — a false positive that
+                      // would silently credit the current component as guarded.
+                      if (!(e.getCause() instanceof NullPointerException)) {
+                        events.add(
+                            violated(
+                                item,
+                                String.format(
+                                    "Record '%s': constructing with null for component '%s' threw"
+                                        + " unexpected %s — expected NullPointerException from a"
+                                        + " requireNonNull guard",
+                                    item.getSimpleName(),
+                                    components[i].getName(),
+                                    e.getCause().getClass().getName())));
+                      } else {
+                        final String expected = components[i].getName();
+                        final String actual = e.getCause().getMessage();
+                        if (!expected.equals(actual)) {
+                          events.add(
+                              violated(
+                                  item,
+                                  String.format(
+                                      "Record '%s': expected NullPointerException message '%s'"
+                                          + " (matching component name) from a requireNonNull"
+                                          + " guard on component '%s', but got '%s' — the NPE may"
+                                          + " have fired on a different component",
+                                      item.getSimpleName(), expected, expected, actual)));
+                        }
+                      }
+                    } catch (final ReflectiveOperationException e) {
+                      events.add(
+                          violated(
+                              item,
+                              String.format(
+                                  "Record '%s': could not invoke canonical constructor while"
+                                      + " verifying null-guard for component '%s': %s",
+                                  item.getSimpleName(), components[i].getName(), e.getMessage())));
+                    }
+                  }
+                }
+              })
+          .because(
+              "io.camunda.search.entities is @NullMarked; non-@Nullable record components carry"
+                  + " a non-null contract that must be enforced at construction time so that"
+                  + " violations from MyBatis hydration or transformer bugs fail fast at the"
+                  + " entity boundary instead of leaking nulls into the API layer");
+
   // ---------------------------------------------------------------------------
   // Helpers
   // ---------------------------------------------------------------------------
 
   // sun.misc.Unsafe access for allocating instances without invoking constructors. Used only by
   // this ArchUnit test to satisfy non-null parameter requirements when reflectively instantiating
-  // records to verify their collection-field defaulting logic.
+  // records to verify their collection-field defaulting logic. sun.misc.Unsafe lives in the
+  // jdk.unsupported module, which is open for reflection without --add-opens on current JDKs, so
+  // the setAccessible call succeeds; the catch is broadened to Exception to also cover any future
+  // runtime access restriction (e.g., if module rules tighten) and to degrade gracefully if the
+  // class is ever removed (JEP 471 has deprecated most of Unsafe for removal).
   private static final Object UNSAFE;
   private static final java.lang.reflect.Method UNSAFE_ALLOCATE;
 
@@ -262,12 +399,40 @@ public final class SearchEntityArchTest {
       theUnsafe.setAccessible(true);
       unsafe = theUnsafe.get(null);
       allocate = unsafeClass.getMethod("allocateInstance", Class.class);
-    } catch (final ReflectiveOperationException e) {
+    } catch (final Exception e) {
       unsafe = null;
       allocate = null;
     }
     UNSAFE = unsafe;
     UNSAFE_ALLOCATE = allocate;
+  }
+
+  /**
+   * Returns {@code true} if the given record component is annotated with {@link Nullable @Nullable}
+   * (jspecify) — either as a TYPE_USE annotation on its declared type or directly on the record
+   * component itself.
+   */
+  private static boolean isNullable(final java.lang.reflect.RecordComponent component) {
+    return component.isAnnotationPresent(Nullable.class)
+        || component.getAnnotatedType().isAnnotationPresent(Nullable.class);
+  }
+
+  /**
+   * Returns the canonical constructor of the given record class — i.e. the constructor whose
+   * parameter types match the record's declared components in order. Records may declare additional
+   * convenience constructors, so {@link Class#getDeclaredConstructors()} alone is not
+   * deterministic.
+   */
+  private static Constructor<?> canonicalConstructor(final Class<?> recordClass)
+      throws NoSuchMethodException {
+    final var components = recordClass.getRecordComponents();
+    final Class<?>[] componentTypes = new Class<?>[components.length];
+    for (int i = 0; i < components.length; i++) {
+      componentTypes[i] = components[i].getType();
+    }
+    final Constructor<?> ctor = recordClass.getDeclaredConstructor(componentTypes);
+    ctor.setAccessible(true);
+    return ctor;
   }
 
   private static boolean isCollectionField(final JavaField field) {
@@ -287,8 +452,7 @@ public final class SearchEntityArchTest {
    */
   private static Object instantiateRecordWithNulls(final JavaClass archClass) throws Exception {
     final Class<?> recordClass = Class.forName(archClass.getName());
-    final Constructor<?> canonicalCtor = recordClass.getDeclaredConstructors()[0];
-    canonicalCtor.setAccessible(true);
+    final Constructor<?> canonicalCtor = canonicalConstructor(recordClass);
 
     final Class<?>[] paramTypes = canonicalCtor.getParameterTypes();
     final Object[] args = new Object[paramTypes.length];
@@ -344,9 +508,14 @@ public final class SearchEntityArchTest {
     // For any other reference type, allocate a zero-initialized instance without invoking its
     // constructor. This produces a non-null sentinel that satisfies Objects.requireNonNull guards
     // in the record's compact constructor without us needing to know how to construct that type.
+    // Guard against a missing Unsafe (static init failed, e.g. future JDK removed the class) so
+    // the test degrades to null rather than NPE-ing the whole suite.
+    if (UNSAFE_ALLOCATE == null) {
+      return null;
+    }
     try {
       return UNSAFE_ALLOCATE.invoke(UNSAFE, type);
-    } catch (final ReflectiveOperationException e) {
+    } catch (final Exception e) {
       return null;
     }
   }
